@@ -111,6 +111,8 @@ API Changes
         * ItemIdTransformStage
         * MDQueryMD5ItemIdTransformer
         * MDQuerySAML1ItemIdTransformer
+    * New ItemMetadataAddingStage adds a collection of ItemMetadata objects to
+      each Item's item metadata
 
 ** Bug
     * [MDA-130] - NPE in DOMResourceStage if resource reading fails
@@ -120,6 +122,7 @@ API Changes
     * [JSE-1] - change factory beans to operate on resources, not files
     * [MDA-132] - generic conditional execution of stages
     * [MDA-139] - add stage implementing ItemId transformations for metadata query
+    * [MDA-141] - add stage to add to item metadata
 
 ** Improvements
     * [JSE-4] - DomDocumentFactoryBean should be renamed
